<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:padding="16dp"
    tools:context=".RegisterCustomer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:text="@string/title_regis"
            android:textColor="#E8E0E0"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regis_cus_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:hint="@string/regis_cus_name"
            android:inputType="textPersonName"
            android:textColor="#EDE7E7"
            android:textColorHint="#E8E0E0" />

        <EditText
            android:id="@+id/regis_cus_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/regis_cus_email"
            android:inputType="textEmailAddress"
            android:textColor="#E3DFDF"
            android:textColorHint="#E8E0E0" />

        <EditText
            android:id="@+id/regis_cus_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/regis_cus_phone"
            android:inputType="phone"
            android:textColor="#EDE4E4"
            android:textColorHint="#E8E0E0" />

        <Button
            android:id="@+id/button_register_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="saveCustomer"
            android:text="@string/button_register_customer"
            style="@style/cus_button_large_rec" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>