<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservation_fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reservation_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/reserve_status"
            android:textAlignment="center"
            android:textColor="#E8E0E0"
            android:textColorHint="#E8E0E0"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/reserve_name_merchant"
                android:textColor="#E8E0E0" />

            <TextView
                android:id="@+id/reserve_name_merchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#E8E0E0"
                android:textColorHint="#E8E0E0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserve_num_queue"
                android:textColor="#E8E0E0" />

            <TextView
                android:id="@+id/reserve_num_queue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#E8E0E0"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>